resources/css/index.css
body {
  width: 1232px;
  margin: auto;


}

header {
  font-family: Verdana;
  font-size: 14px;
  font-weight: bold;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 1232px;
  position: fixed;
  z-index: 1;
  height: 80px;
  background-color: white;
  border-bottom: 1px solid black;
  margin: auto;


}

.name {
  color: MediumAquamarine;
  margin-right: auto;
  padding-left: 10px;
}

nav span {
  display: inline-block;
  padding: 20px 10px;


}

a {
  color: black;
}

main {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
  margin: 0 auto 78px auto;
  padding-top: 116px;
  position: relative;


}

main p {
  font-family: Georgia;
  font-size: 17px;
  color: black;
  display: block;
  text-align: left;

}

main span {
  font-family: Georgia;
  font-weight: bold;
  font-size: 30px;
  color: white;
  text-align: center;
  /*display: flex;
  align-content: center;*/
}

.main-story {
  display: flex;
  flex-direction: column;

}

#phish {
  font-family: Georgia;
  font-weight: bold;
  font-size: 40px;
  color: white;
  display: block;
  text-align: center;
  display: flex;
  /*align-content: center;*/
}

.story {
  /*display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 300px;*/
  /*height: 250px;*/
  /*margin-top: 18px;*/
}

.column {
  margin-right: 32px;
}

.column.large {
  width: 630px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.column.medium {
  width: 300px;
  display: flex;
  flex-direction: column;
}

.column.small {
  width: 240px;
  display: flex;
  flex-direction: column;
}

.secondary-story {
  display: flex;
  justify-content: space-between;
}

#phish {
  background-image: url(../images/img-story-main.png);
  background-size: contain;
  background-size: auto;
  height: 300px;
  margin: 15px;

}

#earth {
  background-image: url(../images/img-story-2.png);
  background-size: contain;
  background-size: auto;
  height: 300px;
  margin: 15px;
}

#memory {
  background-image: url(../images/img-story-3.png);
  background-size: contain;
  background-size: auto;
  height: 300px;
  margin: 15px;
}



#cats {
  background-image: url(../images/img-story-1.png);
  background-size: contain;
  background-size: auto;
  height: 300px;
  margin: 15px;
}

#newsbites-head {
  font-size: 16px;
  font-weight: bold;
  text-align: center;
}

#newsbites-content span {
  display: block;
  padding: 11px 20px;
  background-color: WhiteSmoke;
  font-family: Verdana;
  font-size: 12px;
  color: DimGray;
  margin: 0;
  border-bottom: 1px solid black;
  text-align: left;
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: space-around;
  background-color: MediumAquamarine;
  margin: auto;
  font-family: Verdana;
  font-size: 12px;
  width: 100%;
  height: 325px;
}

footer nav {
  display: inline-flex;
  justify-content: space-around;
}

#title {
  font-family: Georgia;
  font-size: 16px;
  font-weight: bold;
  color: white;
  display: inline-block;
  padding-right: 25px;
  border-right: 2px solid white;
}

